# pico-algae

./: .dockerignore  .gitignore  LICENSE  README.md  dockerfile  main.py  pyproject.toml  requirements-dev.txt
data/processed/dataset_2048x1500_webp/: index.csv
scripts/: inference.py  predict_frcnn.py  sanity_check_dataset.py  train_frcnn.py  tune_frcnn.py  tune_frcnn_post.py  tune_frcnn_train.py
scripts/prep/: cvat_xml_to_txt.py  debug_overlay.py  eda.py  merge_annotations_xml.py  move_imgs.py
src/configs/: predict_frcnn.yaml  train_frcnn.yaml  tune_frcnn.yaml  tune_frcnn_post.yaml  tune_frcnn_train.yaml
src/data/: collate.py  dataset_index.py  pico_dataset_6ch.py
src/datasets/: dataset_index_6ch.py  pico_dataset.py  pico_dataset_6ch.py  transforms.py
src/inference/: folder_dataset.py  image_pairs.py  predict.py  visualize.py
src/models/: frcnn.py  frcnn_6ch.py  weights.py
src/pico_algae/: __init__.py  inference.py
src/prep/: cvat_xml_to_txt.py  eda.py  manifest.py  move_imgs.py  preprocess_images_webp.py
src/train/: amp.py  evaluate.py  optimizer.py  scheduler.py  train_one_epoch.py
src/utils/: boxes.py  io.py  logging.py  seed.py
